deploy/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
spec:
  template:
    metadata:
      labels:
        app: port-scan-exporter
    spec:
      serviceAccountName: port-scan-exporter
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: port-scan-exporter
        image: ghcr.io/gacko/port-scan-exporter:1.0.0
        livenessProbe:
          httpGet:
            port: 8000
            path: /healthz
        readinessProbe:
          httpGet:
            port: 8000
            path: /healthz
        resources:
          requests:
            cpu: 500m
            memory: 250Mi
          limits:
            cpu: 1000m
            memory: 500Mi
      tolerations:
      - operator: Exists
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: port-scan-exporter
