deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
    giantswarm.io/monitoring: "true"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 8000
  selector:
    app: port-scan-exporter
