deploy/app.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
spec:
  template:
    metadata:
      labels:
        app: port-scan-exporter
    spec:
      serviceAccountName: port-scan-exporter
      containers:
      - name: port-scan-exporter
        image: ghcr.io/gacko/port-scan-exporter:latest
        ports:
        - name: metrics
          containerPort: 8000
        livenessProbe:
          httpGet:
            port: metrics
            path: /healthz
        readinessProbe:
          httpGet:
            port: metrics
            path: /healthz
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 200Mi
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: port-scan-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: metrics
    port: 8000
    targetPort: metrics
  selector:
    app: port-scan-exporter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-scan-exporter
            port:
              name: metrics
