deploy/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: port-scan-exporter
  namespace: monitoring
  labels:
    app: port-scan-exporter
spec:
  podSelector:
    matchLabels:
      app: port-scan-exporter
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: port-scan-exporter
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
    - ipBlock:
        cidr: 100.64.0.0/10
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: port-scan-exporter
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 192.168.0.0/16
    - ipBlock:
        cidr: 100.64.0.0/10
    ports:
    - protocol: TCP
      port: 1
      endPort: 65535
    - protocol: UDP
      port: 1
      endPort: 65535
